# MegaProsjekt_ws

./: .gitignore
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/: cell_bringup.launch.py
src/control/: CMakeLists.txt  package.xml
src/control/config/: robot_calibration.yaml  ros2_controllers.yaml
src/control/launch/: rsp.launch.py  start_robot.launch.py
src/control/urdf/: robot_cell_controlled.urdf.xacro
src/coordinator/: CMakeLists.txt  package.xml
src/description/: CMakeLists.txt  package.xml
src/description/launch/: view_robot.launch.py
src/description/meshes/gripper/: GripperMount.stl  MHL210DBODY.stl  MHL210DFINGER.stl
src/description/meshes/table/: BasePlate.stl  EeveeMountingPlate.stl
src/description/rviz/: urdf.rviz
src/description/urdf/: gripper_macro.xacro  robot_cell.urdf.xacro  robot_cell_macro.xacro
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/action/: PlanAndExecute.action
src/motion_pipeline/: CMakeLists.txt  package.xml
src/motion_pipeline/config/: parallel_planning_moveit.yaml
src/motion_pipeline/include/motion_pipeline/: parallel_planner.hpp
src/motion_pipeline/launch/: motion_pipeline.launch.py
src/motion_pipeline/src/: motion_pipeline_node.cpp  parallel_planner.cpp
src/moveit_config/: CMakeLists.txt  package.xml
src/moveit_config/config/: chomp_planning.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  robot_cell.srdf
src/moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py
src/vision/: README.md  package.xml  setup.cfg  setup.py
src/vision/config/: camera_params.yaml  hsv_thresholds.yaml
src/vision/launch/: camera.launch.py  detect.launch.py
src/vision/vision/: hsv_detector.py  hsv_tuner.py
