<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motion_pipeline</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="emfinne13@gmail.com">parallels</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_visual_tools</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_config</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>


  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>chomp_motion_planner</exec_depend>
  <exec_depend>pilz_industrial_motion_planner</exec_depend>
  <exec_depend>stomp_moveit</exec_depend>


  <depend>rclcpp_action</depend>
  <depend>interfaces</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
